fixed overflow-x container

--- a/css/ollie.css
+++ b/css/ollie.css
@@ -595,6 +595,15 @@ pre code {
   padding-left: 15px;
   margin-right: auto;
   margin-left: auto;
+}
+
+.container-project {
+  width: 100%;
+  height: auto;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
   overflow-x: scroll;
 }
 
